--- a/source/less/blocks/contest.less
+++ b/source/less/blocks/contest.less
@@ -1,5 +1,10 @@
 .contest {
   padding-top: 45px;
+  margin-bottom: 17px;
+
+  @media (min-width: @tablet-width) {
+    padding-top: 93px;
+  }
 }
 
 .contest__lead {
