--- a/source/less/blocks/form-comment.less
+++ b/source/less/blocks/form-comment.less
@@ -3,6 +3,12 @@
 
   @media (min-width: @tablet-width) {
     order: 5;
+    padding-top: 0;
+    margin-top: 61px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin-top: 57px;
   }
 }
 
@@ -18,16 +24,18 @@
 
   @media (min-width: @tablet-width) {
     display: block;
-    width: 496px;
-    height: 189px;
+    width: 500px;
+    height: 194px;
     margin: 0 auto;
-    margin-top: 42px;
-    margin-bottom: 53px;
+    margin-top: 21px;
+    margin-bottom: 37px;
   }
 
   @media (min-width: @desktop-width) {
-    width: 816px;
-    height: 124px;
+    width: 820px;
+    height: 128px;
+    margin-top: 18px;
+    margin-bottom: 29px;
   }
 }
 
