--- a/source/less/blocks/icons-list.less
+++ b/source/less/blocks/icons-list.less
@@ -8,6 +8,16 @@
   margin-top: 35px;
   margin-bottom: 14px;
   padding: 0;
+
+  @media (min-width: @tablet-width) {
+    margin-top: 47px;
+    margin-bottom: 28px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin-top: 70px;
+    margin-bottom: 46px;
+  }
 }
 
 .icons-list__link {
