--- a/source/less/blocks/intro.less
+++ b/source/less/blocks/intro.less
@@ -15,7 +15,7 @@
     background-color: @basic-darkgrey;
     background-image: url("../img/iphone-hand-tablet@1x.png"),
       url("../img/bg-back-tablet@1x.jpg");
-    background-position: left bottom, center 0;
+    background-position: -21px 184px, center 0;
     background-repeat: no-repeat, no-repeat;
     min-height: 729px;
   }
@@ -39,13 +39,13 @@
   color: @white;
 
   @media (min-width: @tablet-width) {
-    font-size: 14px;
+    font-size: 18px;
     line-height: 24px;
     margin: 0 auto;
   }
 
-  @media (min-width: @tablet-width) {
-    font-size: 14px;
+  @media (min-width: @desktop-width) {
+    font-size: 18px;
     line-height: 24px;
     margin: 0 auto;
   }
@@ -71,7 +71,7 @@
     font-size: 40px;
     line-height: 48px;
     margin: 0 auto;
-    margin-bottom: 39px;
+    margin-bottom: 31px;
     width: auto;
   }
 
@@ -79,6 +79,7 @@
     position: static;
     font-size: 50px;
     line-height: 68px;
+    margin-bottom: 38px;
   }
 }
 
@@ -98,7 +99,7 @@
   @media (min-width: @tablet-width) {
     position: absolute;
     padding: 0;
-    top: 200px;
+    top: 203px;
     left: 20px;
     background-color: transparent;
     min-width: 0;
@@ -106,6 +107,7 @@
   }
 
   @media (min-width: @desktop-width) {
+    top: 208px;
     left: 130px;
   }
 }
