--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -10,6 +10,7 @@
   @media (min-width: @tablet-width) {
     width: 588px;
     margin-top: 0;
+    margin-bottom: 0;
     font-size: 40px;
     line-height: 54px;
   }
@@ -33,6 +34,7 @@
     @media (min-width: @tablet-width) {
       width: auto;
       text-align: left;
+      margin-bottom: 35px;
     }
 
     @media (min-width: @desktop-width) {
@@ -113,9 +115,16 @@
 }
 
 .advantages__wrapper {
-  background: linear-gradient(174deg, #ffffff 33px, transparent 0);
   background-color: @basic-lightgrey;
-  padding-top: 83px;
+  background-image: url("../img/bg-triangle-white.svg");
+  background-repeat: no-repeat;
+  padding-top: 149px;
+  margin-top: -66px;
+
+  @media (min-width: @tablet-width) {
+    margin-top: -12px;
+    padding-top: 119px;
+  }
 }
 
 .advantages__image {
@@ -132,6 +141,7 @@
 
     @media (min-width: @tablet-width) {
       display: block;
+      margin-top: -70px;
     }
 
     @media (min-width: @desktop-width) {
@@ -145,10 +155,18 @@
 
 
   @media (min-width: @tablet-width) {
-    padding-top: 58px;
+    padding-top: 47px;
   }
 
   @media (min-width: @desktop-width) {
-    padding-top: 77px;
+    padding-top: 61px;
+  }
+}
+
+.advantages__break {
+  display: none;
+
+  @media (min-width: @tablet-width) {
+    display: block;
   }
 }
