--- a/source/less/blocks/effect.less
+++ b/source/less/blocks/effect.less
@@ -12,8 +12,8 @@
 
 .effect__block {
   @media (min-width: @tablet-width) {
-    display: flex;
-    justify-content: space-between;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
     padding-top: 58px;
   }
 }
@@ -35,6 +35,7 @@
 .effect__chunk {
   @media (min-width: @tablet-width) {
     width: 300px;
+    margin-top: 38px;
   }
 
   @media (min-width: @desktop-width) {
@@ -49,12 +50,11 @@
   margin: 0;
   margin-bottom: 24px;
   padding: 0;
-  text-align: center;
 
   @media (min-width: @tablet-width) {
     margin: 0;
+    margin-bottom: 10px;
     padding: 0;
-    width: 168px;
     font-size: 30px;
     line-height: 36px;
   }
@@ -70,7 +70,6 @@
 }
 
 .effect__text {
-  margin: 0 auto;
   margin-top: 46px;
   font-weight: 300;
   font-size: 24px;
@@ -79,6 +78,7 @@
   color: @basic-grey;
 
   @media (min-width: @tablet-width) {
+    margin: 0;
     width: auto;
     font-weight: normal;
     text-align: left;
@@ -107,5 +107,11 @@
     text-decoration: underline;
     font-size: 18px;
     line-height: 30px;
+  }
+}
+
+.effect__break {
+  @media (min-width: @desktop-width) {
+    display: none;
   }
 }
