--- a/source/less/blocks/form-achievements.less
+++ b/source/less/blocks/form-achievements.less
@@ -6,6 +6,12 @@
   @media (min-width: @tablet-width) {
     background-color: inherit;
     order: 4;
+    margin-top: 0;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding-top: 0;
+    margin-top: 56px;
   }
 }
 
@@ -25,15 +31,17 @@
   margin: 0;
   padding: 0;
 
-  @media (min-width: @desktop-width) {
-    padding-right: 60px;
-    padding-left: 60px;
+  @media (min-width: @tablet-width) {
+    padding-left: 58px;
   }
 
   @media (min-width: @desktop-width) {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    column-gap: 60px;
+    grid-template-rows: 1fr 1fr;
+    grid-auto-flow: column;
+    column-gap: 47px;
+    row-gap: 53px;
   }
 }
 
@@ -41,7 +49,8 @@
   margin-bottom: 52px;
 
   @media (min-width: @desktop-width) {
-    width: auto;
+    width: 260px;
+    margin-bottom: 0;
   }
 }
 
@@ -64,7 +73,6 @@
   margin-left: 59px;
   display: block;
   cursor: pointer;
-  user-select: none;
 }
 
 .form-achievements__checkbox-icon {
@@ -89,4 +97,18 @@
   background-image: url("../img/icon-tick.svg");
   background-repeat: no-repeat;
   background-position: 7px 9px;
+}
+
+.form-achievements__title {
+  @media (min-width: @tablet-width) {
+    margin-bottom: 49px;
+  }
+}
+
+.form-achievements__fieldset {
+  padding-bottom: 0;
+
+  @media (min-width: @desktop-width) {
+    padding-bottom: 60px;
+  }
 }
