--- a/source/less/blocks/form-mainInfo.less
+++ b/source/less/blocks/form-mainInfo.less
@@ -14,6 +14,10 @@
   list-style: none;
   margin: 0;
   padding: 0;
+
+  @media (min-width: @desktop-width) {
+    margin-top: 21px;
+  }
 }
 
 .form-mainInfo__caption {
@@ -23,6 +27,7 @@
 
   @media (min-width: @tablet-width) {
     display: block;
-    margin-right: 20px;
+    margin: 0;
+    margin-right: 19px;
   }
 }
