--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -8,14 +8,16 @@
   background-repeat: no-repeat;
   padding-top: 95px;
   padding-bottom: 43px;
+  background-size: cover;
 
   @media (min-width: @tablet-width) {
     background-color: @basic-darkgrey;
     background-image: url("../img/bg-back-tablet@1x.jpg");
     background-position: center 0;
     background-repeat: no-repeat;
-    padding-top: 160px;
-    padding-bottom: 74px;
+    padding-top: 176px;
+    padding-bottom: 94px;
+    background-size: auto;
   }
 
   @media (min-width: @desktop-width) {
@@ -23,12 +25,15 @@
     background-image: url("../img/bg-back-desktop@1x.jpg");
     background-position: center 0;
     background-repeat: no-repeat;
-    padding-bottom: 104px;
+    padding-top: 169px;
+    padding-bottom: 89px;
+    background-size: auto;
   }
 }
 
 .page-main__title {
   margin: 0 auto;
+  width: 240px;
   padding: 0;
   font-size: 24px;
   font-weight: 300;
@@ -39,14 +44,18 @@
   @media (min-width: @tablet-width) {
     font-size: 50px;
     line-height: 68px;
+    width: 500px;
   }
 
   @media (min-width: @desktop-width) {
     font-size: 50px;
     line-height: 68px;
+    width: 750px;
   }
 
   &--width {
+    margin-bottom: 33px;
+
     @media (min-width: @desktop-width) {
       width: 360px;
     }
