--- a/source/less/blocks/send.less
+++ b/source/less/blocks/send.less
@@ -91,7 +91,7 @@
   margin-bottom: 37px;
   padding-bottom: 34px;
   box-sizing: border-box;
-  border-bottom: 1px solid rgba(40, 54, 69, 0.1);;
+  border-bottom: 1px solid rgba(40, 54, 69, 0.1);
 }
 
 .send__control {
