--- a/source/less/blocks/map.less
+++ b/source/less/blocks/map.less
@@ -1,4 +1,5 @@
 .map {
+  position: relative;
   background-image: url("../img/bg-map-mobile@1x.png");
   width: 320px;
   height: 200px;
@@ -28,5 +29,22 @@
   @media (min-width: @desktop-width) {
     width: 100%;
     height: 502px;
+  }
+}
+
+.map svg {
+  position: absolute;
+  top: -1px;
+  width: @mobile-width;
+  height: 35px;
+
+  @media (min-width: @tablet-width) {
+    width: @tablet-width;
+    height: 69px;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: @desktop-width;
+    height: 124px;
   }
 }
