--- a/source/less/blocks/effect.less
+++ b/source/less/blocks/effect.less
@@ -67,6 +67,12 @@
     line-height: 30px;
     text-align: left;
   }
+
+  & br {
+    @media (min-width: @desktop-width) {
+      display: none;
+    }
+  }
 }
 
 .effect__text {
@@ -107,11 +113,5 @@
     text-decoration: underline;
     font-size: 18px;
     line-height: 30px;
-  }
-}
-
-.effect__break {
-  @media (min-width: @desktop-width) {
-    display: none;
   }
 }
