--- a/source/less/blocks/form-contactInfo.less
+++ b/source/less/blocks/form-contactInfo.less
@@ -12,6 +12,7 @@
   @media (min-width: @desktop-width) {
     margin-top: 4px;
     margin-bottom: 0;
+    padding: 0;
   }
 }
 
@@ -51,16 +52,6 @@
   @media (min-width: @tablet-width) {
     flex-direction: column;
     margin-bottom: 30px;
-
-    &::before {
-      content: "";
-      position: absolute;
-      width: 59px;
-      height: 62px;
-      top: 0;
-      right: 0;
-      background-color: @extra-lightgrey;
-    }
   }
 
   @media (min-width: @desktop-width) {
@@ -81,31 +72,29 @@
   }
 }
 
-.form-contactInfo__icon-phone::after {
+.form-contactInfo__icon-phone::before {
   @media (min-width: @tablet-width) {
     content: "";
     position: absolute;
-    width: 20px;
-    height: 19px;
-    top: 21px;
-    right: 19px;
-    background-image: url("../img/icon-phone.svg");
-    background-repeat: no-repeat;
-    background-position: 0 0;
+    width: 59px;
+    height: 62px;
+    top: 0;
+    right: 0;
+    background: @extra-lightgrey url("../img/icon-phone.svg") no-repeat center center;
+    z-index: -1;
   }
 }
 
-.form-contactInfo__icon-mail::after {
+.form-contactInfo__icon-mail::before {
   @media (min-width: @tablet-width) {
     content: "";
     position: absolute;
-    width: 18px;
-    height: 13px;
-    top: 24px;
-    right: 20px;
-    background-image: url("../img/icon-mail.svg");
-    background-repeat: no-repeat;
-    background-position: 0 0;
+    width: 59px;
+    height: 62px;
+    top: 0;
+    right: 0;
+    background: @extra-lightgrey url("../img/icon-mail.svg") no-repeat center center;
+    z-index: -1;
   }
 }
 
