--- a/source/less/blocks/form-comment.less
+++ b/source/less/blocks/form-comment.less
@@ -9,13 +9,12 @@
 
   @media (min-width: @desktop-width) {
     margin-top: 57px;
+    padding: 0;
   }
 }
 
 .form-comment__input {
-  padding-top: 14px;
-  padding-bottom: 0;
-  padding-left: 20px;
+  padding: 14px 0 0 20px;
   margin-bottom: 45px;
   border: 2px solid @extra-lightgrey;
   border-radius: 1px;
