--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -42,9 +42,8 @@
 }
 
 .form__input {
-  padding-top: 21px;
-  padding-bottom: 21px;
-  padding-left: 20px;
+  padding: 21px 75px 21px 20px;
+  background-color: transparent;
   border: 2px solid @extra-lightgrey;
   border-radius: 1px;
   width: 100%;
@@ -183,5 +182,8 @@
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-between;
+    width: 940px;
+    margin: 0 auto;
+    margin-bottom: 66px;
   }
 }
