--- a/source/less/blocks/gallery.less
+++ b/source/less/blocks/gallery.less
@@ -42,8 +42,6 @@
 }
 
 .gallery__post {
-  margin-bottom: 20px;
-
   @media (min-width: @tablet-width) {
     margin-bottom: 0;
   }
@@ -56,6 +54,7 @@
     position: relative;
     background-color: transparent;
     margin-top: 50px;
+    margin-bottom: 20px;
 
     @media (min-width: @tablet-width) {
       margin-top: 77px;
@@ -105,11 +104,12 @@
 }
 
 .gallery__block {
+  position: relative;
   background-color: @basic-lightgrey;
-  padding: 18px 10px 18px 17px;
+  padding: 18px 10px 53px 17px;
 
   @media (min-width: @tablet-width) {
-    min-height: 155px;
+    min-height: 157px;
     padding: 23px 10px 26px 30px;
     box-sizing: border-box;
   }
@@ -124,7 +124,7 @@
 
 .gallery__user {
   margin: 0;
-  margin-bottom: 1px;
+  margin-bottom: 1.3px;
   padding: 0;
   display: inline-block;
   font-style: normal;
@@ -135,18 +135,26 @@
 }
 
 .gallery__button {
-  position: relative;
+  position: absolute;
   background-color: transparent;
   border: none;
   padding: 0;
   padding-left: 31px;
-  margin-top: 11.25px;
+  bottom: 18px;
+
+  @media (min-width: @tablet-width) {
+    bottom: 26px;
+    padding-left: 0;
+    width: 241px;
+  }
 
   &--position {
     @media (min-width: @tablet-width) {
+      width: auto;
       position: absolute;
-      top: 13px;
+      top: 25px;
       right: 60px;
+      bottom: auto;
     }
   }
 
@@ -160,10 +168,23 @@
     background-image: url("../img/icon-heart.svg");
     background-repeat: no-repeat;
     background-position: 0 0;
+
+    @media (min-width: @tablet-width) {
+      left: auto;
+      right: 0;
+    }
+  }
+}
+
+.gallery__button--position::before {
+  @media (min-width: @tablet-width) {
+    left: auto;
+    right: -30px;
   }
 }
 
 .gallery__like {
+  display: block;
   font-size: 12px;
   line-height: 24px;
   text-align: left;
@@ -173,6 +194,9 @@
 
 .gallery__grid {
   margin-bottom: 43px;
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 20px;
 
   @media (min-width: @tablet-width) {
     display: grid;
