--- a/source/less/blocks/effect.less
+++ b/source/less/blocks/effect.less
@@ -7,6 +7,7 @@
 
   @media (min-width: @desktop-width) {
     background-color: @basic-lightgrey;
+    padding-bottom: 71px;
   }
 }
 
@@ -39,7 +40,9 @@
   }
 
   @media (min-width: @desktop-width) {
-    width: 523px;
+    width: 530px;
+    padding-top: 60px;
+    padding-right: 40px;
   }
 }
 
@@ -61,6 +64,7 @@
 
   @media (min-width: @desktop-width) {
     margin: 0;
+    margin-bottom: 26px;
     padding: 0;
     width: auto;
     font-size: 30px;
@@ -85,6 +89,7 @@
 
   @media (min-width: @tablet-width) {
     margin: 0;
+    margin-bottom: 10px;
     width: auto;
     font-weight: normal;
     text-align: left;
@@ -97,6 +102,27 @@
     text-align: left;
     font-size: 18px;
     line-height: 30px;
+    margin-bottom: 32px;
+  }
+
+  & br:nth-child(1) {
+    display: none;
+
+    @media (min-width: @desktop-width) {
+      display: block;
+    }
+  }
+
+  & br:nth-child(2) {
+    display: none;
+
+    @media (min-width: @tablet-width) {
+      display: block;
+    }
+
+    @media (min-width: @desktop-width) {
+      display: none;
+    }
   }
 }
 
