--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -38,10 +38,11 @@
     }
 
     @media (min-width: @desktop-width) {
-      width: auto;
+      width: 240px;
       text-align: center;
       font-size: 18px;
       line-height: 30px;
+      margin: 0 auto;
     }
   }
 }
@@ -54,6 +55,8 @@
   @media (min-width: @tablet-width) {
     width: 310px;
     margin: 0;
+    margin-left: auto;
+    padding-bottom: 8px;
   }
 
   @media (min-width: @desktop-width) {
@@ -61,11 +64,33 @@
     justify-content: space-between;
     width: auto;
   }
+
+  &::after {
+    content: "";
+    display: block;
+    background: url(../img/iphone-screen-mobile@1x.png) no-repeat 0 9px;
+    width: 157px;
+    height: 287px;
+    margin: 0 auto;
+
+    @media (min-width: @tablet-width) {
+      position: absolute;
+      bottom: 0;
+      left: 21px;
+      background: url(../img/iphone-screen-3-tablet@1x.png) no-repeat 0 0;
+      width: 268px;
+      height: 481px;
+    }
+
+    @media (min-width: @desktop-width) {
+      display: none;
+    }
+  }
 }
 
 .advantages__item {
   @media (min-width: @desktop-width) {
-    width: 252px;
+    width: 300px;
   }
 
   & img {
@@ -78,7 +103,9 @@
     @media (min-width: @desktop-width) {
       display: block;
       margin: 0 auto;
-      margin-bottom: 50px;
+      margin-bottom: 56px;
+      width: 300px;
+      height: 301px;
     }
   }
 }
@@ -100,13 +127,15 @@
     text-align: center;
     font-size: 30px;
     line-height: 30px;
+    width: 240px;
+    margin: 0 auto;
+    margin-bottom: 23px;
   }
 }
 
 .advantages__container {
   @media (min-width: @tablet-width) {
-    display: flex;
-    justify-content: space-between;
+    position: relative;
   }
 
   @media (min-width: @desktop-width) {
@@ -122,8 +151,12 @@
   margin-top: -66px;
 
   @media (min-width: @tablet-width) {
-    margin-top: -12px;
     padding-top: 119px;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding-top: 0;
+    margin-top: 0;
   }
 }
 
@@ -153,20 +186,26 @@
 .advantages__block {
   padding-top: 41px;
 
-
   @media (min-width: @tablet-width) {
     padding-top: 47px;
+    margin-bottom: 54px;
   }
 
   @media (min-width: @desktop-width) {
     padding-top: 61px;
+    padding-bottom: 58px;
+    margin-bottom: 0;
   }
 }
 
-.advantages__text br {
+.advantages__item br {
   display: none;
 
   @media (min-width: @tablet-width) {
     display: block;
+  }
+
+  @media (min-width: @desktop-width) {
+    display: none;
   }
 }
