--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -68,7 +68,7 @@
   &::after {
     content: "";
     display: block;
-    background: url(../img/iphone-screen-mobile@1x.png) no-repeat 0 9px;
+    background: url("../img/iphone-screen-mobile@1x.png") no-repeat 0 9px;
     width: 157px;
     height: 287px;
     margin: 0 auto;
@@ -77,7 +77,7 @@
       position: absolute;
       bottom: 0;
       left: 21px;
-      background: url(../img/iphone-screen-3-tablet@1x.png) no-repeat 0 0;
+      background: url("../img/iphone-screen-3-tablet@1x.png") no-repeat 0 0;
       width: 268px;
       height: 481px;
     }
