--- a/source/less/blocks/map.less
+++ b/source/less/blocks/map.less
@@ -13,8 +13,27 @@
 
   @media (min-width: @desktop-width) {
     background-image: url("../img/bg-map-desktop@1x.jpg");
-    width: 1200px;
+    width: 100%;
     height: 502px;
+  }
+
+  &::before {
+    content: "";
+    position: absolute;
+    background: url("../img/bg-triangle-white-footer.svg") no-repeat center top;
+    top: -1px;
+    left: 0;
+    width: 100%;
+    height: 33px;
+    background-size: cover;
+
+    @media (min-width: @tablet-width) {
+      height: 69px;
+    }
+
+    @media (min-width: @desktop-width) {
+      height: 103px;
+    }
   }
 }
 
@@ -29,22 +48,5 @@
   @media (min-width: @desktop-width) {
     width: 100%;
     height: 502px;
-  }
-}
-
-.map svg {
-  position: absolute;
-  top: -1px;
-  width: @mobile-width;
-  height: 35px;
-
-  @media (min-width: @tablet-width) {
-    width: @tablet-width;
-    height: 69px;
-  }
-
-  @media (min-width: @desktop-width) {
-    width: @desktop-width;
-    height: 124px;
   }
 }
