--- a/source/less/blocks/map.less
+++ b/source/less/blocks/map.less
@@ -24,15 +24,15 @@
     top: -1px;
     left: 0;
     width: 100%;
-    height: 33px;
-    background-size: cover;
+    height: 35px;
+    background-size: 100%;
 
     @media (min-width: @tablet-width) {
-      height: 69px;
+      height: 60px;
     }
 
     @media (min-width: @desktop-width) {
-      height: 103px;
+      height: 300px;
     }
   }
 }
