--- a/source/less/blocks/intro.less
+++ b/source/less/blocks/intro.less
@@ -30,6 +30,26 @@
   }
 }
 
+@media (min-resolution: 2dppx) {
+  .intro__picture {
+    background-image: url("../img/iphone-hand-mobile@2x.png"),
+      url("../img/bg-back-mobile@2x.jpg");
+    background-size: 258px, cover;
+
+    @media (min-width: @tablet-width) {
+      background-image: url("../img/iphone-hand-tablet@2x.png"),
+        url("../img/bg-back-tablet@2x.jpg");
+      background-size: 700px, cover;
+    }
+
+    @media (min-width: @desktop-width) {
+      background-image: url("../img/iphone-hand-desktop@2x.png"),
+        url("../img/bg-back-desktop@2x.jpg");
+      background-size: 1050px, cover;
+    }
+  }
+}
+
 .intro__text-style {
   margin: 0;
   font-weight: 300;
