--- a/source/less/blocks/gallery.less
+++ b/source/less/blocks/gallery.less
@@ -3,6 +3,7 @@
 
   @media (min-width: @tablet-width) {
     padding-top: 92px;
+    padding-bottom: 30px;
   }
 }
 
@@ -243,6 +244,7 @@
     grid-template-columns: 1fr 1fr;
     column-gap: 18px;
     row-gap: 17px;
+    margin-bottom: 63px;
   }
 
   @media (min-width: @desktop-width) {
@@ -251,6 +253,7 @@
     grid-template-columns: 1fr 1fr 1fr;
     column-gap: 20px;
     row-gap: 54px;
+    margin-bottom: 55px;
   }
 }
 
