--- a/source/less/blocks/map.less
+++ b/source/less/blocks/map.less
@@ -9,6 +9,7 @@
     background-image: url("../img/bg-map-tablet@1x.jpg");
     width: 660px;
     height: 374px;
+    margin-top: 21px;
   }
 
   @media (min-width: @desktop-width) {
