--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -29,6 +29,12 @@
     padding-bottom: 21px;
     background-size: auto;
   }
+
+  &--height {
+    @media (min-width: @desktop-width) {
+      padding-bottom: 89px;
+    }
+  }
 }
 
 .page-main__title {
