--- a/source/less/blocks/send.less
+++ b/source/less/blocks/send.less
@@ -3,6 +3,15 @@
   margin-top: 43px;
   padding-top: 19px;
   padding-bottom: 30px;
+
+  @media (min-width: @tablet-width) {
+    margin-top: 40px;
+    padding-top: 58px;
+  }
+
+  @media (min-width: @tablet-width) {
+    margin-top: 37px;
+  }
 }
 
 .send__button {
