--- a/source/less/blocks/contest.less
+++ b/source/less/blocks/contest.less
@@ -4,6 +4,11 @@
 
   @media (min-width: @tablet-width) {
     padding-top: 93px;
+    margin-bottom: 47px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin-bottom: 0;
   }
 }
 
