--- a/source/less/blocks/rate.less
+++ b/source/less/blocks/rate.less
@@ -70,6 +70,50 @@
   }
 }
 
+.rate__title--hit {
+  @media (min-width: @tablet-width) {
+    position: relative;
+  }
+
+  &::before {
+    @media (min-width: @tablet-width) {
+      content: "";
+      position: absolute;
+      left: 0;
+      top: 0;
+      background: url("../img/bg-hit-tablet.svg") no-repeat 0 0;
+      width: 61px;
+      height: 61px;
+    }
+
+    @media (min-width: @desktop-width) {
+      background: url("../img/bg-hit.svg") no-repeat 0 0;
+      width: 74px;
+      height: 74px;
+    }
+  }
+
+  &::after {
+    @media (min-width: @tablet-width) {
+      content: "Хит";
+      position: absolute;
+      transform: rotate(-45deg);
+      left: 3px;
+      top: 3px;
+      width: 61px;
+      height: 61px;
+      font-size: 14px;
+      line-height: 30px;
+      font-weight: normal;
+    }
+
+    @media (min-width: @desktop-width) {
+      left: 8px;
+      top: 8px;
+    }
+  }
+}
+
 .rate__text {
   font-weight: 300;
   font-size: 18px;
