--- a/source/less/style.less
+++ b/source/less/style.less
@@ -31,6 +31,7 @@
 @import "blocks/form-contactInfo.less";
 @import "blocks/form-application.less";
 @import "blocks/form-comment.less";
+@import "blocks/modal.less";
 /*! Подключает стили страницы галереи */
 @import "blocks/gallery.less";
 @import "blocks/send.less";
